--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+.text{
+  margin:  10px 540px 0px 540px;
+ 
 }
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.container{
+  border: 2px solid black;
+  width: 500px;
+  height: 250px;
+  margin: 100px auto;
+  border-radius: 10px;
+  background-color: aqua;
+}
+.inside_container{
+  border: 2px solid black;
+  width: 300px;
+  height: 150px;
+  margin: 50px auto;
+  border-radius: 10px;
+  background-color: aquamarine;
+}
+#time{
+  text-align: center;
 }
